# hermes-weather-agent

./: .gitignore  README.md  SUBMISSION.md  agent.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py  wx_viewer.py
.github/workflows/: pypi-publish.yml
examples/: showcase_demo.py  showcase_full.py  showcase_html.py
hermes_weather/: __init__.py  geo.py  jobs.py  rustwx.py  server.py
hermes_weather/tools/: __init__.py  cache.py  catalog.py  cross_section.py  data_packs.py  dataset.py  ecape.py  fetch.py  meteogram.py  native_dataset.py  radar.py  render.py  research.py  satellite.py  severe.py  sounding.py  volume_cross_section.py  windowed.py
tools/: ansi_render.py  compute.py  data_fetch.py  dataset.py  trainer.py
