[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-weather-agent"
version = "0.5.0"
description = "MCP plugin: AI agents drive rustwx for HRRR/GFS rendering, ECAPE diagnostics, cross sections, and dataset assembly."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Fahrenheit Research" }]
keywords = ["mcp", "weather", "hrrr", "ecape", "rustwx", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "rustwx>=0.4.4",
    "mcp>=1.0.0",
    "requests>=2.28",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
weather-mcp = "hermes_weather.server:run_cli"

[project.urls]
Homepage = "https://github.com/FahrenheitResearch/hermes-weather-agent"
"rustwx" = "https://github.com/FahrenheitResearch/rustwx"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_weather*"]
